[tool.poetry]
name = "py-template"
version = "0.1.0"
description = "Template for my Python projects"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "py_template"}]

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
pytest-cov = "^4.1.0"
coverage-badge = "^1.1.0"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
